--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://github.com/sherif-elshamaa/ReactHooks",
+  "homepage": "http://sherif-elshamaa.github.io/ReactHooks",
   "name": "redux-hooks",
   "version": "0.1.0",
   "private": true,
